--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -60,11 +60,18 @@ jobs:
 
       - name: Test with pytest - Run tests with coverage
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=./
 
-      - name: Test with pytest
-        run: |
-          pytest
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.xml
+          retention-days: 7 --cov-report=xml
+
+      # - name: Test with pytest
+      #   run: |
+      #     pytest
 
   deploy:
     runs-on: ubuntu-latest
